# berryql

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FUNDING.yml  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  README_RUN_FASTAPI.md  build.py  dev_tasks.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt  scripts.py
berry/: __init__.py  adapters.py  registry.py  schema.py
berry/core/: __init__.py  selection.py  utils.py
berryql/: __init__.py  adapters.py  database_adapters.py  factory.py  input_converter.py  input_types.py  mutations.py  naming.py  query_analyzer.py  registry.py  resolved_data_helper.py
berryql/adapters/: __init__.py  base.py  mssql.py  postgres.py  sqlite.py
berryql/core/: analyzer.py  enum_utils.py  fields.py  filters.py  hydration.py  naming.py  selection.py  utils.py
berryql/sql/: builders.py  enum_helpers.py
dev/: check_strawberry_config2.py  inspect_create_post_mut.py  inspect_query.py  inspect_status_query.py  inspect_strwb.py  introspect_enum.py  probe_strawberry_obj.py  repro_async_enum.py  repro_mutation.py  run_build_debug.py  run_query.py
examples/: advanced_example.py  basic_example.py  main.py  playground_app.py
tests/: __init__.py  conftest.py  fixtures.py  manual.py  models.py  schema.py  test_adapters_matrix.py  test_aggregate_counts.py  test_aggregate_function.py  test_arguments_mapping.py  test_async_filter_args.py  test_async_where.py  test_backref_and_errors.py  test_basic.py  test_berry_aggregate_counts.py  test_berry_basic.py  test_berry_custom_field.py  test_berry_custom_object_field.py  test_berry_execution_basic.py  test_berry_relations_pagination_aggregate.py  test_berry_schema_shape.py  test_bigint.py  test_binary_array.py  test_binary_array_graphql.py  test_callable_where_pushdown.py  test_camel_case.py  test_cascade_set_null.py  test_context_gating.py  test_context_gating_and_current_user.py  test_custom_field.py  test_custom_fields_inputs.py  test_custom_object_field.py  test_database_adapters.py  test_deep_nested_fallback.py  test_default_arg_descriptions.py  test_default_ordering.py  test_domain_descriptions.py  test_domain_native_strawberry_field.py  test_domain_strawberry_fields.py  test_domain_subscription_naming.py  (+68 more)
tests/common/: __init__.py  fixtures.py  models.py
tests/new/: __init__.py  manual.py  schema.py  test_adapters_matrix.py  test_backref_and_errors.py  test_berry_aggregate_counts.py  test_berry_custom_field.py  test_berry_custom_object_field.py  test_berry_execution_basic.py  test_berry_relations_pagination_aggregate.py  test_berry_schema_shape.py  test_context_gating_and_current_user.py  test_default_ordering.py  test_filters_arguments.py  test_multilevel_nesting.py  test_nested_relations.py  test_ordering.py  test_relation_filters.py  test_where_argument.py
tests/old/: __init__.py  schema.py  test_basic.py  test_database_adapters.py  test_error_handling.py  test_integration.py  test_optimization.py
