[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "berryql"
version = "0.2.0"
description = "A powerful GraphQL query optimization library for Strawberry GraphQL and SQLAlchemy"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Yurii Tolkunov"},
    {name = "Claude Sonnet 4"},
    {name = "GPT-5"},
    {name = "GPT-5.1-Codex"},
    {name = "BerryQL Contributors"},
]
keywords = ["graphql", "strawberry", "sqlalchemy", "query-optimization", "orm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: AsyncIO",
]
requires-python = ">=3.8"
dependencies = [
    "strawberry-graphql>=0.211.0",
    "sqlalchemy>=2.0.25",
    "graphql-core>=3.2.4",
    "inflection>=0.5.1",
]

[project.optional-dependencies]
dev = [
    # Testing tools
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    # Linters/formatters
    "black>=24.3",
    "isort>=5.13",
    "mypy>=1.10",
    "flake8>=7.0",
    "pre-commit>=3.7",
    # Build/publish
    "build>=1.2.1",
    "twine>=5.0.0",
    "check-manifest>=0.50",
]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aiosqlite>=0.19.0",
]
adapters = [
    "asyncpg>=0.29.0",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/uratol/berryql"
Repository = "https://github.com/uratol/berryql"
Documentation = "https://github.com/uratol/berryql#readme"
"Bug Tracker" = "https://github.com/uratol/berryql/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["berryql*"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests"
]
